@@ -5,10 +5,10 @@
 
 Gem::Specification.new do |s|
   s.name = %q{active_model_listener}
-  s.version = "0.2.4"
+  s.version = "0.2.5"
 
   s.required_rubygems_version = Gem::Requirement.new(">= 0") if s.respond_to? :required_rubygems_version=
-  s.authors = ["Jeff Dean"]
+  s.authors = ["Jeff Dean", "Peter Jaros"]
   s.date = %q{2010-05-14}
   s.email = %q{jeff@zilkey.com}
   s.extra_rdoc_files = [
